--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,75 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.0
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
+    website:
+        image: nginx:stable-alpine
         ports:
             - '${APP_PORT:-80}:80'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
+        working_dir: /usr/share/nginx/html
+
+        volumes: 
+            - ./docker/nginx.conf:/etc/nginx/nginx.conf
+            - '.:/usr/share/nginx/html'
+        depends_on: 
+            - agiletech
+
+    agiletech_composer:
+        build: .
+        image: agiletech/php:7
+
+        tty: true
+
+        working_dir: /usr/share/nginx/html
+
+        # ports:
+        #     - '${APP_PORT:-80}:80'
         volumes:
-            - '.:/var/www/html'
-        networks:
-            - sail
-        depends_on:
+            - '.:/usr/share/nginx/html'
+            - ./docker/fpm-pool.conf:/etc/php7/php-fpm.d/www.conf
+            - ./docker/php.ini:/etc/php7/conf.d/custom.ini
+        entrypoint: composer install && php artisan migrate
+
+        depends_on: 
             - mysql
-            - redis
+        
+    agiletech:
+        build: .
+        image: agiletech/php:7
+
+        # ports:
+        #     - '${APP_PORT:-80}:80'
+        volumes:
+            - '.:/usr/share/nginx/html'
+            - ./docker/fpm-pool.conf:/etc/php8/php-fpm.d/www.conf
+            - ./docker/php.ini:/etc/php7/conf.d/custom.ini
+        tty: true
+
+        depends_on: 
+            - mysql
+
+    # laravel.test:
+    #     build:
+    #         context: ./vendor/laravel/sail/runtimes/8.0
+    #         dockerfile: Dockerfile
+    #         args:
+    #             WWWGROUP: '${WWWGROUP}'
+    #     image: sail-8.0/app
+    #     ports:
+    #         - '${APP_PORT:-80}:80'
+    #     environment:
+    #         WWWUSER: '${WWWUSER}'
+    #         LARAVEL_SAIL: 1
+    #     volumes:
+    #         - '.:/var/www/html'
+    #     networks:
+    #         - sail
+    #     depends_on:
+    #         - mysql
+    #         - redis
     mysql:
         image: 'mysql:5.7'
-        ports:
-            - '${FORWARD_DB_PORT:-3306}:3306'
+        # ports:
+        #     - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
@@ -31,33 +77,31 @@ services:
             MYSQL_PASSWORD: '${DB_PASSWORD}'
             MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
         volumes:
-            - 'sailmysql:/var/lib/mysql'
-        networks:
-            - sail
+            - database:/var/lib/mysql
         healthcheck:
           test: ["CMD", "mysqladmin", "ping"]
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sailredis:/data'
-        networks:
-            - sail
-        healthcheck:
-          test: ["CMD", "redis-cli", "ping"]
-    mailhog:
-        image: 'mailhog/mailhog:latest'
-        ports:
-            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
-        networks:
-            - sail
-networks:
-    sail:
-        driver: bridge
+    # redis:
+    #     image: 'redis:alpine'
+    #     ports:
+    #         - '${FORWARD_REDIS_PORT:-6379}:6379'
+    #     volumes:
+    #         - 'sailredis:/data'
+    #     networks:
+    #         - sail
+    #     healthcheck:
+    #       test: ["CMD", "redis-cli", "ping"]
+    # mailhog:
+    #     image: 'mailhog/mailhog:latest'
+    #     ports:
+    #         - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+    #         - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+    #     networks:
+    #         - sail
+# networks:
+#     sail:
+#         driver: bridge
 volumes:
-    sailmysql:
+    database:
         driver: local
-    sailredis:
-        driver: local
+#     sailredis:
+#         driver: local
