--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -36,6 +36,7 @@ http {
         listen [::]:80 default_server;
         listen 80 default_server;
         server_name _;
+        server_tokens off;
 
         sendfile off;
 
