--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     website:
         image: nginx:stable-alpine
         ports:
-            - '${APP_PORT:-80}:80'
+            - '${APP_PORT:-8080}:80'
         working_dir: /usr/share/nginx/html
 
         volumes: 
@@ -17,8 +17,6 @@ services:
         build: .
         image: agiletech/php:7
 
-        tty: true
-
         working_dir: /usr/share/nginx/html
 
         # ports:
@@ -27,7 +25,7 @@ services:
             - '.:/usr/share/nginx/html'
             - ./docker/fpm-pool.conf:/etc/php7/php-fpm.d/www.conf
             - ./docker/php.ini:/etc/php7/conf.d/custom.ini
-        entrypoint: composer install && php artisan migrate
+        entrypoint: composer install
 
         depends_on: 
             - mysql
@@ -35,6 +33,7 @@ services:
     agiletech:
         build: .
         image: agiletech/php:7
+        working_dir: /usr/share/nginx/html
 
         # ports:
         #     - '${APP_PORT:-80}:80'
@@ -68,8 +67,8 @@ services:
     #         - redis
     mysql:
         image: 'mysql:5.7'
-        # ports:
-        #     - '${FORWARD_DB_PORT:-3306}:3306'
+        ports:
+            - '${FORWARD_DB_PORT:-30306}:3306'
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_DATABASE: '${DB_DATABASE}'
